# DS-Singapore-resale-flat-price

./: Model training.ipynb  Model-Training-Page.py  README.md  pyproject.toml
pages/: Model-Prediction-Page.py
